[package]
name = "project-dc-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.7.0"
serde = "1.0.137"
tokio = { version = "0.2", features = ["macros"] }
[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
features = [
    "builder",
    "cache",
    "framework",
    "model",
    "standard_framework",
    "rustls_backend",
    "utils",
    "client",
    "gateway"
]