[package]
name = "project-dc-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.7.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.81"
bracket-random = "0.8.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
features = [
    "builder",
    "cache",
    "framework",
    "model",
    "standard_framework",
    "rustls_backend",
    "utils",
    "client",
    "gateway"
]
